<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/mainTheme"
    tools:context=".WeatherNextDay"

    >


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/mainLayout"
            android:fontFamily="serif-monospace"
            android:text="@string/weatherOnWeek"
            android:textAlignment="center"
            android:textColor="@color/mainText"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/user_field_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainText"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/Button"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/hint_user_field"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/dayOne"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/weather"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/dayTwo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/weather"
            android:textSize="20dp"

            />

        <TextView
            android:id="@+id/dayThree"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/weather"
            android:textSize="20dp"

            />
        <TextView
            android:id="@+id/dayFour"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/weather"
            android:textSize="20sp"

            />
        <Button
            android:id="@+id/weather_four_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Button"
            android:fontFamily="monospace"
            android:text="@string/main_button" />
        <Button
            android:id="@+id/mur_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Button"
            android:text="@string/mur_btn" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Button"
            android:text="@string/back_activity" />


    </LinearLayout>
</RelativeLayout>